<resources>
    <string name="app_name">BooksBnBBusinessCard</string>
    <string name="app_name_actual">Books, Beds &amp; Breakfast</string>
    <string name="booksBedsBreakfast">BOOKS, BEDS &amp; BREAKFAST</string>
    <string name="address">VIA DELLE COSTELLAZIONI 305, ROME</string>
    <string name="site">WWW.BOOKSBNB.EU</string>
    <string name="phoneNumber">+39 370 3438349</string>
    <string name="email">INFO@BOOKSBNB.EU</string>
    <string name="atBooks">\@BOOKSBNB</string>
    <string name="hall">Hall</string>
    <string name="tolkien">Tolkien</string>
    <string name="follett">Follett</string>
    <string name="gaiman">Gaiman</string>
    <string name="hallDesc">A vintage furnished common hall</string>
    <string name="tolkienDesc">Our deluxe bedroom with private bathroom</string>
    <string name="follettTwinDesc">Twin bedroom with shared bathroom</string>
    <string name="follettDoubleDesc">Double bedroom with shared bathroom</string>
    <string name="gaimanDesc">Single bedroom with shared bathroom</string>
    <string name="gallery">Gallery</string>
    <string name="facebookIcon">Facebook</string>
    <string name="instagramIcon">Instagram</string>
    <string name="phoneIcon">Phone</string>
    <string name="emailIcon">E-Mail</string>
    <string name="browserIcon">Website</string>
    <string name="mapIcon">Address</string>
</resources>
