<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.booksbnb.booksbnbbusinesscard.Main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#455a64">
<!--Start Main ScrollView-->
    <!--Logo/Image Gallery-->
    <LinearLayout
        android:id="@+id/logo_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:background="#e3dfd7">
        <TextView
            android:id="@+id/pic_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#455a64"
            android:fontFamily="@font/californianfb"
            android:text=""
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/pic_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#455a64"
            android:fontFamily="@font/californianfb"
            android:text=""
            android:textSize="20sp"/>
        <ImageView
            android:id="@+id/bnb_logo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:scaleType="fitCenter"
            android:src="@drawable/booksbnblogonew"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/gallery" />
        <TextView
            android:id="@+id/booksBedsBreakfast"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/californianfb"
            android:textSize="24dp"
            android:textColor="#455a64"
            android:text=""/>
    </LinearLayout>
    <!--Contact Info-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="vertical">
        <!--Address-->
        <LinearLayout
            android:onClick="openMaps"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageView
                android:contentDescription="@string/mapIcon"
                android:padding="4dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/maps"
                android:alpha="0.7"
                android:scaleType="fitCenter"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
            <TextView
                android:id="@+id/address_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#e3dfd7"
                android:fontFamily="@font/californianfb"
                android:textSize="16sp"
                android:text="@string/address"/>
        </LinearLayout>
    </LinearLayout>
        <!--Website-->
        <LinearLayout
        android:onClick="openWebsite"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:contentDescription="@string/browserIcon"
            android:layout_width="30dp"
            android:padding="4dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:src="@drawable/browser"
            android:alpha="0.7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#e3dfd7"
            android:fontFamily="@font/californianfb"
            android:textSize="16sp"
            android:text="@string/site"/>
    </LinearLayout>
        <!--Phone Number-->
        <LinearLayout
        android:onClick="callBnB"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:contentDescription="@string/phoneIcon"
            android:padding="4dp"
            android:alpha="0.7"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/phone"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#e3dfd7"
            android:fontFamily="@font/californianfb"
            android:textSize="16sp"
            android:text="@string/phoneNumber"/>
    </LinearLayout>
        <!--Email-->
        <LinearLayout
        android:onClick="sendEmail"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:contentDescription="@string/emailIcon"
            android:padding="4dp"
            android:alpha="0.7"
            android:layout_width="30dp"
            android:src="@drawable/email"
            android:layout_height="30dp" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#e3dfd7"
            android:fontFamily="@font/californianfb"
            android:textSize="16sp"
            android:text="@string/email"/>
    </LinearLayout>
        <!--Social-->
        <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal">
        <!--Facebook-->
    <LinearLayout
        android:onClick="openFacebook"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="30dp"
            android:alpha="0.7"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:padding="4dp"
            android:src="@drawable/facebook"
            android:contentDescription="@string/facebookIcon"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#e3dfd7"
            android:textSize="16sp"
            android:fontFamily="@font/californianfb"
            android:text="@string/atBooks"/>
    </LinearLayout>
        <!--Instagram-->
    <LinearLayout
        android:onClick="openInstagram"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="4dp"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagramIcon"
            android:alpha="0.7"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#e3dfd7"
            android:fontFamily="@font/californianfb"
            android:textSize="16sp"
            android:text="@string/atBooks"/>
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>